--- a/index.html
+++ b/index.html
@@ -29,95 +29,91 @@
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="sidebar">
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link--active">Главная</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
-                            </li>
+                <aside class="saidbar">
+                    <div class="features-item">
+                        <div class="features-item__content">
+                            <p class="top-tarif"><b>Топ тариф</b></p>
+                            <h3 class="features-item__content-title">стандарт</h3>
+                            <div class="features-item__content-desc">
+                                <div class="features-item__content-text">Создан для вашего комфортного отдыха
+                                </div>
+                            </div>
+                            <div class="features-item__content-details">
+                                <ul class="features-item__content-details-item">
+                                    <li class="features-item__content-details-item-list">Питание включено</li>
+                                    <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
+                                    <li class="features-item__content-details-item-list">Детское кресло</li>
+                                </ul>
+                            </div>
+                            <div class="features-item__content-price">
+                                <sub class="sub">$</sub>19
+                            </div>
+                        </div>
+                    </div>
+                    <div class="social-networks"><b>Наши социальные сети</b></div>
+                    <div class="social-networks-block">
+                        <ul class="social-networks-list">
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
                         </ul>
-                    </nav>
+                    </div>
+
                 </aside>
+
+
                 <main class="maincontent__container">
+                    <div class="nav-block">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="./index.html" class="menu__link menu__link--main menu__link--active">Главная</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                     <div class="banner">
                         <img class="banner__img" src="img2/Photoair.png" alt="">
                     </div>
-                    <section class="price-contents">
-                        <h2 class="title">Тарифы</h2>
-                        <div class="price-contents__features">
-                            <div class="price-contents__item"> 
-                            <div class="features-item">
-                                <div class="features-item__icon">
-                                    <img src="./img2/flower.png" class="features-item__icon-jpg" alt="icon tarif">
-                                </div>
-                                <div class="features-item__content">
-                                    <h3 class="features-item__content-title">стандарт</h3>
-                                    <div class="features-item__content-desc">
-                                        <div class="features-item__content-text">Создан для вашего комфортного отдыха
-                                        </div>
-                                    </div>
-                                    <div class="features-item__content-details">
-                                        <ul class="features-item__content-details-item">
-                                            <li class="features-item__content-details-item-list">Питание включено</li>
-                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features-item__content-details-item-list">Детское кресло</li>
-                                        </ul>
-                                    </div>
-                                    <div class="features-item__content-price">
-                                        <sub class="sub">$</sub>19
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="features-item_active">
-                                <div class="features-item__icon">
-                                    <img src="./img2/mark-as-favorite-star.png" class="features-item__icon-jpg" alt="icon tarif">
-                                </div>
-                                <div class="features-item__content">
-                                    <h3 class="features-item__content-title">премиум</h3>
-                                    <div class="features-item__content-desc">
-                                        <div class="features-item__content-text">Для любителей хороших впечатлений</div>
-                                    </div>
-                                    <div class="features-item__content-details">
-                                        <ul class="features-item__content-details-item">
-                                            <li class="features-item__content-details-item-list">Питание включено</li>
-                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features-item__content-details-item-list">Детское кресло</li>
-                                        </ul>
-                                    </div>
-                                    <div class="features-item__content-price">
-                                        <sub class="sub">$</sub>39
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="features-item">
-                                <div class="features-item__icon">
-                                    <img src="./img2/painter-palette.png" class="features-item__icon-jpg" alt="icon tarif">
-                                </div>
-                                <div class="features-item__content">
-                                    <h3 class="features-item__content-title">лакшери</h3>
-                                    <div class="features-item__content-desc">
-                                        <div class="features-item__content-text">Всё самое лучшее и незабываемое</div>
-                                    </div>
-                                    <div class="features-item__content-details">
-                                        <ul class="features-item__content-details-item">
-                                            <li class="features-item__content-details-item-list">Питание включено</li>
-                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features-item__content-details-item-list">Детское кресло</li>
-                                        </ul>
-                                    </div>
-                                    <div class="features-item__content-price">
-                                        <sub class="sub">$</sub>99
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+
                     <section class="content-list">
                         <h2 class="title"> Последние новости </h2>
                         <div class="content-list-items">
@@ -206,62 +202,22 @@
                 </main>
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-text">
-                    <p>
-                        Сделано с любовью и старанием
-                        на курсе «HTML + CSS» <a class="footer_text_link" href="https://loftschool.com/">"LoftSchool"</a>
-                        Автор работы: <span class="avtor_name"> <strong> Койшина Асемгуль </strong></span>
-                    </p>
-                </div>
-                <div class="footer-logo">
-                    <a href="./index.html">
-                        <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
-                </div>
-                <div class="footer-contacts">
-                    <div class="social-networks"> Наши социальные сети</div>
-                    <div class="social-networks-block">
-                        <ul class="social-networks-list">
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                        </ul>
-                    </div>
-                </div>
-        </footer>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-text">
+                <p>
+                    Сделано с любовью и старанием
+                    на курсе «HTML + CSS» <a class="footer_text_link" href="https://loftschool.com/">"LoftSchool"</a>
+                    Автор работы: <span class="avtor_name"> <strong> Койшина Асемгуль </strong></span>
+                </p>
+            </div>
+            <div class="footer-logo">
+                <a href="./index.html">
+                    <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
