--- a/crew.html
+++ b/crew.html
@@ -22,38 +22,109 @@
                 </div>
                 <div class="contacts">
                     <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-                    <div class="contacts__desk">График работы</div>
+                    <div class="contacts__desk" title="пн-вс: 09:00-20:00 
+обед: 13:00-14:30">График работы</div>
                 </div>
             </div>
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="sidebar">
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link">Главная</a>
+                <aside class="saidbar">
+                    <div class="content-partner">
+                        <h2 class="title--crew">Партнёры</h2>
+                        <ul class="content-partner__list">
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo3.png" alt="Партнёры">
+                                </a>
                             </li>
-                            <li class="menu__item">
-                                <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo6.png" alt="Партнёры">
+                                </a>
                             </li>
-                            <li class="menu__item">
-                                <a href="./crew.html" class="menu__link menu__link--crew menu__link_active">Экипаж</a>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo-1.png" alt="Партнёры">
+                                </a>
                             </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo4.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo-2.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo5.png" alt="Партнёры">
+                                </a>
+                            </li>
+
+
                         </ul>
-                    </nav>
+                    </div>
+                    <div class="social-networks"><b>Наши социальные сети</b></div>
+                    <div class="social-networks-block">
+                        <ul class="social-networks-list">
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
+
                 </aside>
                 <main class="maincontent__container">
-                    <nav class="nav-menu">
-                        <ul class="nav-menu__list">
-                            <li class="nav-menu__item">
-                                <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
-                            </li>
-                            <li class="nav-menu__item">
-                                <a href="./crew.html" class="nav-menu__link-second"><em>Экипаж</em></a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <div class="nav-block">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="./index.html" class="menu__link menu__link--main ">Главная</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./crew.html" class="menu__link menu__link--crew menu__link--active">Экипаж</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                     <div class="crew">
                         <h2 class="title">Экипаж</h2>
                         <div class="crew-contents">
@@ -80,7 +151,8 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Сухарина Инна Николаевна</h3>
                                         <h3 class="crew-item__content-title">Бортпроводник</h3>
-                                        <div class="price-contents__content-text">Благодаря деятельности этого человека,
+                                        <div class="price-contents__content-text">Благодаря деятельности этого
+                                            человека,
                                             на борту самолета клиенты чувствуют себя, как дома. Инна Николаевна чутко
                                             относится ко всем требованиям клиентов, очень любит детей и всячески
                                             помогает сделать полет комфортным и приятным.
@@ -153,41 +225,7 @@
                                 </li>
                         </div>
                     </div>
-                    <div class="content-partner">
-                        <h2 class="title">Партнёры</h2>
-                        <ul class="content-partner__list">
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo-1.png" alt="Партнёры">
-                                </a>
-                            </li>
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo-2.png" alt="Партнёры">
-                                </a>
-                            </li>
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo3.png" alt="Партнёры">
-                                </a>
-                            </li>
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo4.png" alt="Партнёры">
-                                </a>
-                            </li>
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo5.png" alt="Партнёры">
-                                </a>
-                            </li>
-                            <li class="content-partner__item">
-                                <a class="content-partner__item-link" href="#">
-                                    <img src="./img2/logo6.png" alt="Партнёры">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+
                     <div class="pagination">
                         <div class="pagination__display">Страница 1 из 7</div>
                         <div class="pagination__list">
@@ -237,48 +275,6 @@
                 <div class="footer-logo">
                     <a href="./index.html">
                         <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
-                </div>
-                <div class="footer-contacts">
-                    <div class="social-networks"> Наши социальные сети</div>
-                    <div class="social-networks-block">
-                        <ul class="social-networks-list">
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                        </ul>
-                    </div>
                 </div>
         </footer>
 </body>
