--- a/reviews.html
+++ b/reviews.html
@@ -22,49 +22,93 @@
                 </div>
                 <div class="contacts">
                     <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-                    <div class="contacts__desk">График работы</div>
+                    <div class="contacts__desk" title="пн-вс: 09:00-20:00 
+обед: 13:00-14:30">График работы</div>
                 </div>
             </div>
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="sidebar">
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link">Главная</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="./reviews.html" class="menu__link menu__link--reviews menu__link_active">Отзывы</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
-                            </li>
+                <aside class="saidbar">
+                    <div class="booking-questions">
+                        <div class="booking-questions-block">
+                            <p class="booking-questions-block-text">Вопросы по бронированию билетов в нашей
+                                авиакомпании
+                                принимаются. Для этого можно оставить <a class="booking-application" href="#">заявку на
+                                    сайте</a>
+                                или же позвонить по номеру круглосуточной поддержки <a class="contacts__phone" href="tel:8 (800) 00-392-10">
+                                    8(800) 00-392-10</a>.</p>
+                        </div>
+                    </div>
+                    <div class="social-networks"><b>Наши социальные сети</b></div>
+                    <div class="social-networks-block">
+                        <ul class="social-networks-list">
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#">
+                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
+                                    </a>
+                                </li>
+                            </div>
                         </ul>
-                    </nav>
+                    </div>
+
                 </aside>
                 <main class="maincontent__container">
-                    <nav class="nav-menu">
-                        <ul class="nav-menu__list">
-                            <li class="nav-menu__item">
-                                <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
-                            </li>
-                            <li class="nav-menu__item">
-                                <a href="./reviews.html" class="nav-menu__link-second"><em>Отзывы</em></a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <div class="nav-block">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="./index.html" class="menu__link menu__link--main">Главная</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./reviews.html" class="menu__link menu__link--reviews menu__link--active">Отзывы</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                     <section class="content-list">
                         <h2 class="title"> Отзывы </h2>
                         <div class="content-list-items">
-                            <ul class="content-list-list">
-                                <li class="content-list-item">
-                                    <div class="avatar">
+                            <ul class="content-list-list--rew">
+                                <li class="content-list-item--rew">
+                                    <div class="avatar--rew">
                                         <img src="img2/девушка.png" alt=""></div>
-                                    <div class="desc">
+                                    <div class="desc-rew">
                                         <div class="date"> 12.10.2016 </div>
                                         <h4 class="name">Ирина Паламарчук</h4>
-                                        <p class="text">
+                                        <p class="text--rew">
                                             Классный полет, трясло первые полчаса так, что я боялась отстегнуть ремни.
                                             Слава Богу, ничего не случилось, но мне даже валерьянка не помогла, так
                                             страшно было. Рекомендую эту компанию, но лучше доплатить и лететь с
@@ -72,26 +116,26 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="content-list-item">
-                                    <div class="avatar">
+                                <li class="content-list-item--rew">
+                                    <div class="avatar--rew">
                                         <img src="img2/мужик.png" alt=""></div>
-                                    <div class="desc">
+                                    <div class="desc-rew">
                                         <div class="date">01.02.2016</div>
                                         <h4 class="name">Александр Бельков</h4>
-                                        <p class="text">
+                                        <p class="text--rew">
                                             Все понравилось, вежливые стюардессы, вовремя убирают, напитки предлагали 2
                                             раза, а еду – 1 раз. Единственное, что не понравилось, как то мало места
                                             для ног, но с этим у меня часто проблема, рост 2,1м.
                                         </p>
                                     </div>
                                 </li>
-                                <li class="content-list-item">
-                                    <div class="avatar">
+                                <li class="content-list-item--rew">
+                                    <div class="avatar--rew">
                                         <img src="img2/синий лого.png" alt=""></div>
-                                    <div class="desc">
+                                    <div class="desc-rew">
                                         <div class="date">22.12.2015</div>
                                         <h4 class="name">Игорь Николаенко</h4>
-                                        <p class="text">
+                                        <p class="text--rew">
                                             Кормили супер вообще! Сказали, что это из-за того, что полет менее 2,5
                                             часов. Но прибавьте к этому время регистрации в аэропорту. Летел с женой и
                                             мы очень проголодались. Просто имейте это ввиду, берите с собой хотя бы
@@ -99,13 +143,13 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="content-list-item">
-                                    <div class="avatar">
+                                <li class="content-list-item--rew">
+                                    <div class="avatar--rew">
                                         <img src="img2/бабушка.png" alt=""></div>
-                                    <div class="desc">
+                                    <div class="desc-rew">
                                         <div class="date">14.08.2015</div>
                                         <h4 class="name">Анастасия Порядная</h4>
-                                        <p class="text">
+                                        <p class="text--rew">
                                             За такую цену просто все отлично! Кто недоволен, платите в 2 раза больше за
                                             аналогичные рейсы. Мне понравилось, что на борту было чисто, я аллергик и
                                             всегда чутко реагирую на пыль. Спасибо за полет! Рекомендую!
@@ -152,16 +196,9 @@
                 </main>
             </div>
         </div>
-        <div class="container">
-        <div class="booking-questions">
-            <div class="booking-questions-block">
-                <p class="booking-questions-block-text">Вопросы по бронированию билетов в нашей авиакомпании
-                    принимаются. Для этого можно оставить <a class="booking-application" href="#">заявку на сайте</a>
-                    или же позвонить по номеру круглосуточной поддержки <a class="contacts__phone" href="tel:8 (800) 00-392-10">8
-                        (800) 00-392-10</a>.</p>
-            </div>
-        </div>
-    </div>
+
+
+
         <section class="rewiews">
             <form class="rewiews__block">
                 <div class="rewiews__contents">
@@ -227,48 +264,6 @@
                 <div class="footer-logo">
                     <a href="./index.html">
                         <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
-                </div>
-                <div class="footer-contacts">
-                    <div class="social-networks"> Наши социальные сети</div>
-                    <div class="social-networks-block">
-                        <ul class="social-networks-list">
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                        </ul>
-                    </div>
                 </div>
         </footer>
 </body>
