--- a/reviews.html
+++ b/reviews.html
@@ -17,14 +17,19 @@
         <header class="header">
             <div class="container">
                 <div class="logo">
-                    <a href="./index.html">
+                    <a href="./main.html">
                         <img src="img2/logo_header.png" alt="logo-pic"></a>
                 </div>
-                <div class="contacts">
-                    <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-                    <div class="contacts__desk" title="пн-вс: 09:00-20:00 
-обед: 13:00-14:30">График работы</div>
-                </div>
+                <div class="header-contacts">
+                        <a href="tel:88000039210" class="header-contacts__phone">8 (800) 00-392-10</a>
+                        <div class="header-contacts__time">
+                            <a class="header-contacts__time-link" href="#">График работы</a>
+                            <div class="schedule">
+                                <div class="schedule__time">пн-вс: 09:00-20:00</div>
+                                <div class="schedule__notwork">обед: 13:00-14:30</div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </header>
         <div class="maincontent">
@@ -87,7 +92,7 @@
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a href="./index.html" class="menu__link menu__link--main">Главная</a>
+                                    <a href="./main.html" class="menu__link menu__link--main">Главная</a>
                                 </li>
                                 <li class="menu__item">
                                     <a href="./reviews.html" class="menu__link menu__link--reviews menu__link--active">Отзывы</a>
@@ -262,7 +267,7 @@
                     </p>
                 </div>
                 <div class="footer-logo">
-                    <a href="./index.html">
+                    <a href="./main.html">
                         <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
                 </div>
         </footer>
