--- a/main.html
+++ b/main.html
@@ -55,50 +55,17 @@
                             </div>
                         </div>
                     </div>
-                    <div class="social-networks"><b>Наши социальные сети</b></div>
-                    <div class="social-networks-block">
-                        <ul class="social-networks-list">
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                        </ul>
+                    <div class="socials socials_aside">
+                        <div class="socials__title">Наши социальные сети</div>
+                        <div class="socials__list">
+                            <div class="socials__icon socials__icon-link-vk"></div>
+                            <div class="socials__icon socials__icon-link-fb"></div>
+                            <div class="socials__icon socials__icon-link-google"></div>
+                            <div class="socials__icon socials__icon-link-mail"></div>
+                            <div class="socials__icon socials__icon-link-tw"></div>
+                        </div>
                     </div>
-
                 </aside>
-
-
                 <main class="maincontent__container">
                     <div class="nav-block">
                         <nav class="menu">
@@ -118,7 +85,6 @@
                     <div class="banner">
                         <img class="banner__img" src="img2/Photoair.png" alt="">
                     </div>
-
                     <section class="content-list">
                         <h2 class="title"> Последние новости </h2>
                         <div class="content-list-items">
