--- a/crew.html
+++ b/crew.html
@@ -21,15 +21,15 @@
                         <img src="img2/logo_header.png" alt="logo-pic"></a>
                 </div>
                 <div class="header-contacts">
-                        <a href="tel:88000039210" class="header-contacts__phone">8 (800) 00-392-10</a>
-                        <div class="header-contacts__time">
-                            <a class="header-contacts__time-link" href="#">График работы</a>
-                            <div class="schedule">
-                                <div class="schedule__time">пн-вс: 09:00-20:00</div>
-                                <div class="schedule__notwork">обед: 13:00-14:30</div>
-                            </div>
+                    <a href="tel:88000039210" class="header-contacts__phone">8 (800) 00-392-10</a>
+                    <div class="header-contacts__time">
+                        <a class="header-contacts__time-link" href="#">График работы</a>
+                        <div class="schedule">
+                            <div class="schedule__time">пн-вс: 09:00-20:00</div>
+                            <div class="schedule__notwork">обед: 13:00-14:30</div>
                         </div>
                     </div>
+                </div>
             </div>
         </header>
         <div class="maincontent">
@@ -68,51 +68,18 @@
                                     <img src="./img2/logo5.png" alt="Партнёры">
                                 </a>
                             </li>
-
-
                         </ul>
                     </div>
-                    <div class="social-networks"><b>Наши социальные сети</b></div>
-                    <div class="social-networks-block">
-                        <ul class="social-networks-list">
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                            <div class="social-networks-icon">
-                                <li class="social-networks-item">
-                                    <a href="#">
-                                        <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                                    </a>
-                                </li>
-                            </div>
-                        </ul>
+                    <div class="socials socials_aside">
+                        <div class="socials__title">Наши социальные сети</div>
+                        <div class="socials__list">
+                            <div class="socials__icon socials__icon-link-vk"></div>
+                            <div class="socials__icon socials__icon-link-fb"></div>
+                            <div class="socials__icon socials__icon-link-google"></div>
+                            <div class="socials__icon socials__icon-link-mail"></div>
+                            <div class="socials__icon socials__icon-link-tw"></div>
+                        </div>
                     </div>
-
                 </aside>
                 <main class="maincontent__container">
                     <div class="nav-block">
@@ -230,7 +197,6 @@
                                 </li>
                         </div>
                     </div>
-
                     <div class="pagination">
                         <div class="pagination__display">Страница 1 из 7</div>
                         <div class="pagination__list">
