--- a/reviews.html
+++ b/reviews.html
@@ -21,15 +21,15 @@
                         <img src="img2/logo_header.png" alt="logo-pic"></a>
                 </div>
                 <div class="header-contacts">
-                        <a href="tel:88000039210" class="header-contacts__phone">8 (800) 00-392-10</a>
-                        <div class="header-contacts__time">
-                            <a class="header-contacts__time-link" href="#">График работы</a>
-                            <div class="schedule">
-                                <div class="schedule__time">пн-вс: 09:00-20:00</div>
-                                <div class="schedule__notwork">обед: 13:00-14:30</div>
-                            </div>
+                    <a href="tel:88000039210" class="header-contacts__phone">8 (800) 00-392-10</a>
+                    <div class="header-contacts__time">
+                        <a class="header-contacts__time-link" href="#">График работы</a>
+                        <div class="schedule">
+                            <div class="schedule__time">пн-вс: 09:00-20:00</div>
+                            <div class="schedule__notwork">обед: 13:00-14:30</div>
                         </div>
                     </div>
+                </div>
             </div>
         </header>
         <div class="maincontent">
@@ -47,14 +47,16 @@
                     </div>
                     <div class="socials socials_aside">
                         <div class="socials__title">Наши социальные сети</div>
-                        <div class="socials__list">
-                            <div class="socials__icon socials__icon-link-vk"></div>
-                            <div class="socials__icon socials__icon-link-fb"></div>
-                            <div class="socials__icon socials__icon-link-google"></div>
-                            <div class="socials__icon socials__icon-link-mail"></div>
-                            <div class="socials__icon socials__icon-link-tw"></div>
+                        <div class="socials__block">
+                            <ul class="socials__list">
+                                <li class="socials__icon socials__icon-link-vk"></li>
+                                <li class="socials__icon socials__icon-link-fb"></li>
+                                <li class="socials__icon socials__icon-link-google"></li>
+                                <li class="socials__icon socials__icon-link-mail"></li>
+                                <li class="socials__icon socials__icon-link-tw"></li>
+                            </ul>
                         </div>
-                        </div>
+                    </div>
                 </aside>
                 <main class="maincontent__container">
                     <div class="nav-block">
