--- a/crew.html
+++ b/crew.html
@@ -72,12 +72,14 @@
                     </div>
                     <div class="socials socials_aside">
                         <div class="socials__title">Наши социальные сети</div>
-                        <div class="socials__list">
-                            <div class="socials__icon socials__icon-link-vk"></div>
-                            <div class="socials__icon socials__icon-link-fb"></div>
-                            <div class="socials__icon socials__icon-link-google"></div>
-                            <div class="socials__icon socials__icon-link-mail"></div>
-                            <div class="socials__icon socials__icon-link-tw"></div>
+                        <div class="socials__block">
+                            <ul class="socials__list">
+                                <li class="socials__icon socials__icon-link-vk"></li>
+                                <li class="socials__icon socials__icon-link-fb"></li>
+                                <li class="socials__icon socials__icon-link-google"></li>
+                                <li class="socials__icon socials__icon-link-mail"></li>
+                                <li class="socials__icon socials__icon-link-tw"></li>
+                            </ul>
                         </div>
                     </div>
                 </aside>
